# Quickbooks-ar-pipeline

./: .env.example  .gitignore  README.md  pyproject.toml
app/: dashboard.py
pipelines/: sync_quickbooks_to_supabase.py
scripts/: quickbooks_oauth_authorization_code.py  run_checks.sh  verify_setup.py
src/payments_ar/: __init__.py  config.py
